deadbeef.h

struct scriptableItem_s;
typedef struct scriptableItem_s ddb_scriptable_item_t;
#define DB_API_VERSION_MAJOR 1
#define DB_API_VERSION_MINOR 18
enum {
    DDB_IS_SUBTRACK = (1<<0), 
    DDB_IS_READONLY = (1<<1), 
    DDB_HAS_EMBEDDED_CUESHEET = (1<<2),
    DDB_TAG_ID3V1 = (1<<8),
    DDB_TAG_ID3V22 = (1<<9),
    DDB_TAG_ID3V23 = (1<<10),
    DDB_TAG_ID3V24 = (1<<11),
    DDB_TAG_APEV2 = (1<<12),
    DDB_TAG_VORBISCOMMENTS = (1<<13),
    DDB_TAG_CUESHEET = (1<<14),
    DDB_TAG_ICY = (1<<15),
    DDB_TAG_ITUNES = (1<<16),
    DDB_TAG_MASK = 0x000fff00
};
typedef struct DB_playItem_s {
    int32_t startsample DEPRECATED_110;
    int32_t endsample DEPRECATED_110;
    int32_t shufflerating; 
} ddb_playItem_t;
typedef ddb_playItem_t DB_playItem_t;
typedef struct {
    char unused; 
} ddb_playlist_t;
typedef struct DB_metaInfo_s {
    struct DB_metaInfo_s *next;
    const char *key;
    const char *value;
#if (DDB_API_LEVEL >= 10)
    int valuesize;
#endif
} DB_metaInfo_t;
typedef struct DB_id3v2_frame_s {
    struct DB_id3v2_frame_s *next;
    char id[5];
    uint32_t size;
    uint8_t flags[2];
    uint8_t data[0];
} DB_id3v2_frame_t;
typedef struct DB_id3v2_tag_s {
    uint8_t version[2];
    uint8_t flags;
    DB_id3v2_frame_t *frames;
} DB_id3v2_tag_t;
typedef struct DB_apev2_frame_s {
    struct DB_apev2_frame_s *next;
    uint32_t flags;
    char key[256];
    uint32_t size; 
    uint8_t data[0];
} DB_apev2_frame_t;
typedef struct DB_apev2_tag_s {
    uint32_t version;
    uint32_t flags;
    DB_apev2_frame_t *frames;
} DB_apev2_tag_t;
enum {
    DB_PLUGIN_DECODER = 1,
    DB_PLUGIN_OUTPUT  = 2,
    DB_PLUGIN_DSP     = 3,
    DB_PLUGIN_MISC    = 4,
    DB_PLUGIN_VFS     = 5,
    DB_PLUGIN_PLAYLIST = 6,
    DB_PLUGIN_GUI = 7,
#if (DDB_API_LEVEL >= 15)
    DB_PLUGIN_MEDIASOURCE = 8,
#endif
};
enum output_state_t {
    OUTPUT_STATE_STOPPED DEPRECATED_111 = 0,
    OUTPUT_STATE_PLAYING DEPRECATED_111 = 1,
    OUTPUT_STATE_PAUSED DEPRECATED_111 = 2,
};
typedef enum ddb_playback_state_e {
    DDB_PLAYBACK_STATE_STOPPED = 0,
    DDB_PLAYBACK_STATE_PLAYING = 1,
    DDB_PLAYBACK_STATE_PAUSED = 2,
} ddb_playback_state_t;
enum playback_order_t {
    PLAYBACK_ORDER_LINEAR DEPRECATED_111 = 0,
    PLAYBACK_ORDER_SHUFFLE_TRACKS DEPRECATED_111 = 1,
    PLAYBACK_ORDER_RANDOM DEPRECATED_111 = 2,
    PLAYBACK_ORDER_SHUFFLE_ALBUMS DEPRECATED_111 = 3,
};
enum playback_mode_t {
    PLAYBACK_MODE_LOOP_ALL DEPRECATED_111 = 0, 
    PLAYBACK_MODE_NOLOOP DEPRECATED_111 = 1, 
    PLAYBACK_MODE_LOOP_SINGLE DEPRECATED_111 = 2, 
};
typedef enum ddb_shuffle_e {
    DDB_SHUFFLE_OFF = 0,
    DDB_SHUFFLE_TRACKS = 1,
    DDB_SHUFFLE_RANDOM = 2,
    DDB_SHUFFLE_ALBUMS = 3,
} ddb_shuffle_t;
typedef enum ddb_repeat_e {
    DDB_REPEAT_ALL = 0,
    DDB_REPEAT_OFF = 1,
    DDB_REPEAT_SINGLE = 2,
} ddb_repeat_t;
enum ddb_playlist_change_t {
    DDB_PLAYLIST_CHANGE_CONTENT, 
    DDB_PLAYLIST_CHANGE_CREATED,
    DDB_PLAYLIST_CHANGE_DELETED,
    DDB_PLAYLIST_CHANGE_POSITION,
    DDB_PLAYLIST_CHANGE_TITLE,
    DDB_PLAYLIST_CHANGE_SELECTION,
    DDB_PLAYLIST_CHANGE_SEARCHRESULT,
    DDB_PLAYLIST_CHANGE_PLAYQUEUE,
};
typedef struct {
    int event;
    int size;
} ddb_event_t;
typedef struct {
    ddb_event_t ev;
    DB_playItem_t *track;
    float playtime; 
    time_t started_timestamp; 
} ddb_event_track_t;
typedef struct {
    ddb_event_t ev;
    DB_playItem_t *from;
    DB_playItem_t *to;
    float playtime; 
    time_t started_timestamp; 
} ddb_event_trackchange_t;
typedef struct {
    ddb_event_t ev;
    int state;
} ddb_event_state_t;
typedef struct {
    ddb_event_t ev;
    DB_playItem_t *track;
    float playpos;
} ddb_event_playpos_t;
typedef struct DB_conf_item_s {
    char *key;
    char *value;
    struct DB_conf_item_s *next;
} DB_conf_item_t;
enum {
    DB_EV_NEXT = 1, 
    DB_EV_PREV = 2, 
    DB_EV_PLAY_CURRENT = 3, 
    DB_EV_PLAY_NUM = 4, 
    DB_EV_STOP = 5, 
    DB_EV_PAUSE = 6, 
    DB_EV_PLAY_RANDOM = 7, 
    DB_EV_TERMINATE = 8, 
    DB_EV_PLAYLIST_REFRESH DEPRECATED_18 = 9, 
    DB_EV_REINIT_SOUND = 10, 
    DB_EV_CONFIGCHANGED = 11, 
    DB_EV_TOGGLE_PAUSE = 12,
    DB_EV_ACTIVATED = 13, 
    DB_EV_PAUSED = 14, 
    DB_EV_PLAYLISTCHANGED = 15, 
    DB_EV_VOLUMECHANGED = 16, 
    DB_EV_OUTPUTCHANGED = 17, 
    DB_EV_PLAYLISTSWITCHED = 18, 
    DB_EV_SEEK = 19, 
    DB_EV_ACTIONSCHANGED = 20, 
    DB_EV_DSPCHAINCHANGED = 21, 
#if (DDB_API_LEVEL >= 5)
    DB_EV_SELCHANGED = 22,
    DB_EV_PLUGINSLOADED = 23, 
#endif
#if (DDB_API_LEVEL >= 8)
    DB_EV_FOCUS_SELECTION = 24, 
#endif
#if (DDB_API_LEVEL >= 17)
    DB_EV_PLAYBACK_STATE_DID_CHANGE = 25,
#endif
#if (DDB_API_LEVEL >= 18)
    DB_EV_PLAY_NEXT_ALBUM = 26, 
    DB_EV_PLAY_PREV_ALBUM = 27, 
    DB_EV_PLAY_RANDOM_ALBUM = 28, 
#endif
    DB_EV_FIRST = 1000, 
    DB_EV_SONGCHANGED = 1000, 
    DB_EV_SONGSTARTED = 1001, 
    DB_EV_SONGFINISHED = 1002, 
    DB_EV_TRACKINFOCHANGED = 1004, 
    DB_EV_SEEKED = 1005, 
#if (DDB_API_LEVEL >= 5)
    DB_EV_TRACKFOCUSCURRENT = 1006, 
#endif
#if (DDB_API_LEVEL >= 10)
    DB_EV_CURSOR_MOVED = 1007, 
#endif
    DB_EV_MAX
};
enum pl_column_t {
#if (DDB_API_LEVEL >= 10)
    DB_COLUMN_STANDARD = -1,
#endif
    DB_COLUMN_FILENUMBER = 0,
    DB_COLUMN_PLAYING = 1,
    DB_COLUMN_ALBUM_ART = 8,
#if (DDB_API_LEVEL >= 10)
    DB_COLUMN_CUSTOM = 9
#endif
};
enum {
    DDB_REPLAYGAIN_ALBUMGAIN,
    DDB_REPLAYGAIN_ALBUMPEAK,
    DDB_REPLAYGAIN_TRACKGAIN,
    DDB_REPLAYGAIN_TRACKPEAK,
};
typedef enum ddb_rg_source_mode_e {
#else
enum {
#endif
    DDB_RG_SOURCE_MODE_PLAYBACK_ORDER = 0,
    DDB_RG_SOURCE_MODE_TRACK = 1,
    DDB_RG_SOURCE_MODE_ALBUM = 2,
#if (DDB_API_LEVEL >= 11)
} ddb_rg_source_mode_t;
#else
};
typedef enum ddb_rg_processing_e {
#else
    enum {
#endif
    DDB_RG_PROCESSING_NONE = 0,
    DDB_RG_PROCESSING_GAIN = 1,
    DDB_RG_PROCESSING_PREVENT_CLIPPING = 2,
#if (DDB_API_LEVEL >= 11)
} ddb_rg_processing_t;
#else
};
typedef struct {
    int _size;
    int source_mode;
    uint32_t processing_flags;
    float preamp_with_rg;
    float preamp_without_rg;
    int has_album_gain;
    int has_track_gain;
    float albumgain;
    float albumpeak;
    float trackgain;
    float trackpeak;
} ddb_replaygain_settings_t;
enum ddb_sort_order_t {
    DDB_SORT_DESCENDING,
    DDB_SORT_ASCENDING,
#if (DDB_API_LEVEL >= 3)
    DDB_SORT_RANDOM,
#endif
};
enum ddb_sys_directory_t {
    DDB_SYS_DIR_CONFIG = 1,
    DDB_SYS_DIR_PREFIX = 2,
    DDB_SYS_DIR_DOC = 3,
    DDB_SYS_DIR_PLUGIN = 4,
    DDB_SYS_DIR_PIXMAP = 5,
    DDB_SYS_DIR_CACHE = 6,
#if (DDB_API_LEVEL >= 13)
    DDB_SYS_DIR_PLUGIN_RESOURCES = 7,
#endif
};
typedef struct {
    struct DB_vfs_s *vfs;
} DB_FILE;
typedef struct DB_md5_s {
    char data[88];
} DB_md5_t;
typedef struct {
    int bps;
    int channels;
    int samplerate;
    uint32_t channelmask;
    int is_float; 
#if (DDB_API_LEVEL >= 17)
    uint32_t flags;
#else
    int is_bigendian;
#endif
} ddb_waveformat_t;
enum {
    DDB_WAVEFORMAT_FLAG_IS_DOP = 0x01,
};
typedef struct ddb_audio_data_s {
    ddb_waveformat_t *fmt;
    float *data;
    int nframes;
} ddb_audio_data_t;
typedef struct ddb_fileadd_data_s {
    int visibility;
    ddb_playlist_t *plt;
    ddb_playItem_t *track;
} ddb_fileadd_data_t;
enum {
    DDB_TF_CONTEXT_HAS_INDEX = 1,
    DDB_TF_CONTEXT_HAS_ID = 2,
    DDB_TF_CONTEXT_NO_DYNAMIC = 4, 
#if (DDB_API_LEVEL >= 9)
    DDB_TF_CONTEXT_MULTILINE = 8,
#endif
#if (DDB_API_LEVEL >= 10)
    DDB_TF_CONTEXT_TEXT_DIM = 16,
#endif
#if (DDB_API_LEVEL >= 13)
    DDB_TF_CONTEXT_NO_MUTEX_LOCK = 32,
#endif
};
enum {
    DDB_TF_ESC_DIM = 1,
#if DDB_API_LEVEL >= 14
    DDB_TF_ESC_RGB = 2,
#endif
};
typedef struct ddb_file_found_data_s {
    ddb_playlist_t *plt;
    const char *filename;
    int is_dir;
} ddb_file_found_data_t;
typedef struct ddb_tf_context_s {
    int _size; 
    uint32_t flags; 
    ddb_playItem_t *it; 
    ddb_playlist_t *plt; 
    int idx;
    int id;
    int iter; 
    int update;
#if (DDB_API_LEVEL >= 10)
    int dimmed;
#endif
#if (DDB_API_LEVEL >= 17)
    void (*metadata_transformer)(struct ddb_tf_context_s *ctx, char *data, size_t size);
#endif
} ddb_tf_context_t;
enum {
    DDB_LOG_LAYER_DEFAULT = 0,
    DDB_LOG_LAYER_INFO = 1,
};
typedef enum {
    DDB_INSERT_FILE_RESULT_SUCCESS = 0,
    DDB_INSERT_FILE_RESULT_UNRECOGNIZED_FILE = 1, 
    DDB_INSERT_FILE_RESULT_RECOGNIZED_FAILED = 2, 
    DDB_INSERT_FILE_RESULT_RELATIVE_PATH = 3, 
    DDB_INSERT_FILE_RESULT_NULL_FILENAME = 4, 
    DDB_INSERT_FILE_RESULT_ESCAPE_CHARACTERS_IN_FILENAME = 5, 
    DDB_INSERT_FILE_RESULT_NO_FILE_EXTENSION = 6, 
    DDB_INSERT_FILE_RESULT_CUESHEET_ERROR = 7, 
} ddb_insert_file_result_t;
typedef enum {
    DDB_INSERT_FILE_FLAG_FOLLOW_SYMLINKS = 1<<0,
    DDB_INSERT_FILE_FLAG_ENTER_ARCHIVES = 1<<1,
} ddb_insert_file_flags_t;
struct DB_plugin_s;
typedef struct DB_plugin_action_s {
    const char *title;
    const char *name;
    uint32_t flags;
    DB_plugin_action_callback_t callback DEPRECATED_14;
    struct DB_plugin_action_s *next;
#if (DDB_API_LEVEL >= 5)
    DB_plugin_action_callback2_t callback2;
#endif
} DB_plugin_action_t;
typedef struct ddb_response_s {
    size_t _size;
    int (*append)(struct ddb_response_s *response, char *bytes, size_t size);
} ddb_response_t;
typedef struct DB_plugin_s {
    int32_t type;
    int16_t api_vmajor;
    int16_t api_vminor;
    int16_t version_major;
    int16_t version_minor;
    uint32_t flags; 
    uint32_t reserved1;
    uint32_t reserved2;
    uint32_t reserved3;
    const char *id; 
    const char *name; 
    const char *descr; 
    const char *copyright; 
    const char *website; 
    int (*command) (int cmd, ...);
    int (*start) (void);
    int (*stop) (void);
    int (*connect) (void);
    int (*disconnect) (void);
#if (DDB_API_LEVEL >= 15)
    int (*exec_cmdline) (const char *cmdline, int cmdline_size, ddb_response_t *response);
#else
    int (*exec_cmdline) (const char *cmdline, int cmdline_size);
#endif
    DB_plugin_action_t* (*get_actions) (DB_playItem_t *it);
    int (*message) (uint32_t id, uintptr_t ctx, uint32_t p1, uint32_t p2);
    const char *configdialog;
} DB_plugin_t;
typedef struct DB_fileinfo_s {
    struct DB_decoder_s *plugin;
    ddb_waveformat_t fmt;
    float readpos;
    DB_FILE *file;
} DB_fileinfo_t;
typedef struct DB_decoder_s {
    DB_plugin_t plugin;
    DB_fileinfo_t *(*open) (uint32_t hints);
    int (*init) (DB_fileinfo_t *info, DB_playItem_t *it);
    void (*free) (DB_fileinfo_t *info);
    int (*read) (DB_fileinfo_t *info, char *buffer, int nbytes);
    int (*seek) (DB_fileinfo_t *info, float seconds);
    int (*seek_sample) (DB_fileinfo_t *info, int sample);
    DB_playItem_t * (*insert) (ddb_playlist_t *plt, DB_playItem_t *after, const char *fname);
    int (*numvoices) (DB_fileinfo_t *info);
    void (*mutevoice) (DB_fileinfo_t *info, int voice, int mute);
    int (*read_metadata) (DB_playItem_t *it);
    int (*write_metadata) (DB_playItem_t *it);
    const char **exts;
    const char **prefixes;
#if (DDB_API_LEVEL >= 7)
    DB_fileinfo_t *(*open2) (uint32_t hints, DB_playItem_t *it);
#endif
} DB_decoder_t;
typedef struct DB_output_s {
    DB_plugin_t plugin;
    int (*init) (void);
    int (*free) (void);
    int (*setformat) (ddb_waveformat_t *fmt);
    int (*play) (void);
    int (*stop) (void);
    int (*pause) (void);
    int (*unpause) (void);
#if (DDB_API_LEVEL >= 11)
    ddb_playback_state_t (*state) (void);
#else
    int (*state) (void);
#endif
    void (*enum_soundcards) (void (*callback)(const char *name, const char *desc, void*), void *userdata);
    ddb_waveformat_t fmt;
    int has_volume;
} DB_output_t;
typedef struct ddb_dsp_context_s {
    struct DB_dsp_s *plugin;
    struct ddb_dsp_context_s *next;
    unsigned enabled : 1;
} ddb_dsp_context_t;
typedef struct DB_dsp_s {
    DB_plugin_t plugin;
    ddb_dsp_context_t* (*open) (void);
    void (*close) (ddb_dsp_context_t *ctx);
    int (*process) (ddb_dsp_context_t *ctx, float *samples, int frames, int maxframes, ddb_waveformat_t *fmt, float *ratio);
    void (*reset) (ddb_dsp_context_t *ctx);
    int (*num_params) (void);
    const char *(*get_param_name) (int p);
    void (*set_param) (ddb_dsp_context_t *ctx, int p, const char *val);
    void (*get_param) (ddb_dsp_context_t *ctx, int p, char *str, int len);
    const char *configdialog;
#if (DDB_API_LEVEL >= 1)
    int (*can_bypass) (ddb_dsp_context_t *ctx, ddb_waveformat_t *fmt);
#endif
} DB_dsp_t;
typedef struct DB_vfs_s {
    DB_plugin_t plugin;
    const char **(*get_schemes) (void); 
    int (*is_streaming) (void); 
    int (*is_container) (const char *fname); 
    void (*abort) (DB_FILE *stream) DEPRECATED_111;
    DB_FILE* (*open) (const char *fname);
    void (*close) (DB_FILE *f);
    size_t (*read) (void *ptr, size_t size, size_t nmemb, DB_FILE *stream);
    int (*seek) (DB_FILE *stream, int64_t offset, int whence);
    int64_t (*tell) (DB_FILE *stream);
    void (*rewind) (DB_FILE *stream);
    int64_t (*getlength) (DB_FILE *stream);
    const char * (*get_content_type) (DB_FILE *stream);
    void (*set_track) (DB_FILE *f, DB_playItem_t *it);
    int (*scandir) (const char *dir, struct dirent ***namelist, int (*selector) (const struct dirent *), int (*cmp) (const struct dirent **, const struct dirent **));
#if (DDB_API_LEVEL >= 6)
    const char *(*get_scheme_for_name) (const char *fname);
#endif
#if (DDB_API_LEVEL >= 11)
    uint64_t (*get_identifier) (DB_FILE *f);
    void (*abort_with_identifier) (uint64_t identifier);
#endif
} DB_vfs_t;