deadbeef.pxd

# SPDX-FileCopyrightText: 2024 Jakub Wasylków <kuba_160@protonmail.com>
# SPDX-License-Identifier: CC-PDDC

# extra needed
cdef enum:
    DB_API_VERSION_MAJOR = 1
    DB_API_VERSION_MINOR = 18


cdef extern from "dirent.h" nogil:
    ctypedef struct DIR:
        pass
    cdef struct dirent:
        char* d_name

    dirent* readdir(DIR* dirp)
    int readdir_r(DIR *dirp, dirent *entry, dirent **result)

from cpython.getargs cimport va_list
from libc.time cimport time_t
from libc.stdio cimport FILE
from libc.stdint cimport int32_t, uint32_t, uint8_t, intptr_t, uintptr_t, int64_t, uint64_t, int16_t
# generated with pxdgen
cdef extern from "./deadbeef.h":

    cdef struct scriptableItem_s

    ctypedef scriptableItem_s ddb_scriptable_item_t

    cpdef enum:
        DDB_IS_SUBTRACK
        DDB_IS_READONLY
        DDB_HAS_EMBEDDED_CUESHEET
        DDB_TAG_ID3V1
        DDB_TAG_ID3V22
        DDB_TAG_ID3V23
        DDB_TAG_ID3V24
        DDB_TAG_APEV2
        DDB_TAG_VORBISCOMMENTS
        DDB_TAG_CUESHEET
        DDB_TAG_ICY
        DDB_TAG_ITUNES
        DDB_TAG_MASK

    cdef struct DB_playItem_s:
        int32_t startsample
        int32_t endsample
        int32_t shufflerating

    ctypedef DB_playItem_s ddb_playItem_t

    ctypedef ddb_playItem_t DB_playItem_t

    ctypedef struct ddb_playlist_t:
        char unused

    cdef struct DB_metaInfo_s:
        DB_metaInfo_s* next
        const char* key
        const char* value
        int valuesize

    ctypedef DB_metaInfo_s DB_metaInfo_t

    cdef struct DB_id3v2_frame_s:
        DB_id3v2_frame_s* next
        char id[5]
        uint32_t size
        uint8_t flags[2]
        uint8_t data[0]

    ctypedef DB_id3v2_frame_s DB_id3v2_frame_t

    cdef struct DB_id3v2_tag_s:
        uint8_t version[2]
        uint8_t flags
        DB_id3v2_frame_t* frames

    ctypedef DB_id3v2_tag_s DB_id3v2_tag_t

    cdef struct DB_apev2_frame_s:
        DB_apev2_frame_s* next
        uint32_t flags
        char key[256]
        uint32_t size
        uint8_t data[0]

    ctypedef DB_apev2_frame_s DB_apev2_frame_t

    cdef struct DB_apev2_tag_s:
        uint32_t version
        uint32_t flags
        DB_apev2_frame_t* frames

    ctypedef DB_apev2_tag_s DB_apev2_tag_t

    cpdef enum:
        DB_PLUGIN_DECODER
        DB_PLUGIN_OUTPUT
        DB_PLUGIN_DSP
        DB_PLUGIN_MISC
        DB_PLUGIN_VFS
        DB_PLUGIN_PLAYLIST
        DB_PLUGIN_GUI
        DB_PLUGIN_MEDIASOURCE

    cpdef enum output_state_t:
        OUTPUT_STATE_STOPPED
        OUTPUT_STATE_PLAYING
        OUTPUT_STATE_PAUSED

    cpdef enum ddb_playback_state_e:
        DDB_PLAYBACK_STATE_STOPPED
        DDB_PLAYBACK_STATE_PLAYING
        DDB_PLAYBACK_STATE_PAUSED

    ctypedef ddb_playback_state_e ddb_playback_state_t

    cpdef enum playback_order_t:
        PLAYBACK_ORDER_LINEAR
        PLAYBACK_ORDER_SHUFFLE_TRACKS
        PLAYBACK_ORDER_RANDOM
        PLAYBACK_ORDER_SHUFFLE_ALBUMS

    cpdef enum playback_mode_t:
        PLAYBACK_MODE_LOOP_ALL
        PLAYBACK_MODE_NOLOOP
        PLAYBACK_MODE_LOOP_SINGLE

    cpdef enum ddb_shuffle_e:
        DDB_SHUFFLE_OFF
        DDB_SHUFFLE_TRACKS
        DDB_SHUFFLE_RANDOM
        DDB_SHUFFLE_ALBUMS

    ctypedef ddb_shuffle_e ddb_shuffle_t

    cpdef enum ddb_repeat_e:
        DDB_REPEAT_ALL
        DDB_REPEAT_OFF
        DDB_REPEAT_SINGLE

    ctypedef ddb_repeat_e ddb_repeat_t

    cpdef enum ddb_playlist_change_t:
        DDB_PLAYLIST_CHANGE_CONTENT
        DDB_PLAYLIST_CHANGE_CREATED
        DDB_PLAYLIST_CHANGE_DELETED
        DDB_PLAYLIST_CHANGE_POSITION
        DDB_PLAYLIST_CHANGE_TITLE
        DDB_PLAYLIST_CHANGE_SELECTION
        DDB_PLAYLIST_CHANGE_SEARCHRESULT
        DDB_PLAYLIST_CHANGE_PLAYQUEUE

    ctypedef struct ddb_event_t:
        int event
        int size

    ctypedef struct ddb_event_track_t:
        ddb_event_t ev
        DB_playItem_t* track
        float playtime
        time_t started_timestamp

    ctypedef struct ddb_event_trackchange_t:
        ddb_event_t ev
        DB_playItem_t* from_ "from"
        DB_playItem_t* to
        float playtime
        time_t started_timestamp

    ctypedef struct ddb_event_state_t:
        ddb_event_t ev
        int state

    ctypedef struct ddb_event_playpos_t:
        ddb_event_t ev
        DB_playItem_t* track
        float playpos

    cdef struct DB_conf_item_s:
        char* key
        char* value
        DB_conf_item_s* next

    ctypedef DB_conf_item_s DB_conf_item_t

    cpdef enum:
        DB_EV_NEXT
        DB_EV_PREV
        DB_EV_PLAY_CURRENT
        DB_EV_PLAY_NUM
        DB_EV_STOP
        DB_EV_PAUSE
        DB_EV_PLAY_RANDOM
        DB_EV_TERMINATE
        DB_EV_PLAYLIST_REFRESH
        DB_EV_REINIT_SOUND
        DB_EV_CONFIGCHANGED
        DB_EV_TOGGLE_PAUSE
        DB_EV_ACTIVATED
        DB_EV_PAUSED
        DB_EV_PLAYLISTCHANGED
        DB_EV_VOLUMECHANGED
        DB_EV_OUTPUTCHANGED
        DB_EV_PLAYLISTSWITCHED
        DB_EV_SEEK
        DB_EV_ACTIONSCHANGED
        DB_EV_DSPCHAINCHANGED
        DB_EV_SELCHANGED
        DB_EV_PLUGINSLOADED
        DB_EV_FOCUS_SELECTION
        DB_EV_PLAYBACK_STATE_DID_CHANGE
        DB_EV_PLAY_NEXT_ALBUM
        DB_EV_PLAY_PREV_ALBUM
        DB_EV_PLAY_RANDOM_ALBUM
        DB_EV_FIRST
        DB_EV_SONGCHANGED
        DB_EV_SONGSTARTED
        DB_EV_SONGFINISHED
        DB_EV_TRACKINFOCHANGED
        DB_EV_SEEKED
        DB_EV_TRACKFOCUSCURRENT
        DB_EV_CURSOR_MOVED
        DB_EV_MAX

    cpdef enum pl_column_t:
        DB_COLUMN_STANDARD
        DB_COLUMN_FILENUMBER
        DB_COLUMN_PLAYING
        DB_COLUMN_ALBUM_ART
        DB_COLUMN_CUSTOM

    cpdef enum:
        DDB_REPLAYGAIN_ALBUMGAIN
        DDB_REPLAYGAIN_ALBUMPEAK
        DDB_REPLAYGAIN_TRACKGAIN
        DDB_REPLAYGAIN_TRACKPEAK

    cpdef enum ddb_rg_source_mode_e:
        DDB_RG_SOURCE_MODE_PLAYBACK_ORDER
        DDB_RG_SOURCE_MODE_TRACK
        DDB_RG_SOURCE_MODE_ALBUM

    ctypedef ddb_rg_source_mode_e ddb_rg_source_mode_t

    cpdef enum ddb_rg_processing_e:
        DDB_RG_PROCESSING_NONE
        DDB_RG_PROCESSING_GAIN
        DDB_RG_PROCESSING_PREVENT_CLIPPING

    ctypedef ddb_rg_processing_e ddb_rg_processing_t

    ctypedef struct ddb_replaygain_settings_t:
        int _size
        int source_mode
        uint32_t processing_flags
        float preamp_with_rg
        float preamp_without_rg
        int has_album_gain
        int has_track_gain
        float albumgain
        float albumpeak
        float trackgain
        float trackpeak

    cpdef enum ddb_sort_order_t:
        DDB_SORT_DESCENDING
        DDB_SORT_ASCENDING
        DDB_SORT_RANDOM

    cpdef enum ddb_sys_directory_t:
        DDB_SYS_DIR_CONFIG
        DDB_SYS_DIR_PREFIX
        DDB_SYS_DIR_DOC
        DDB_SYS_DIR_PLUGIN
        DDB_SYS_DIR_PIXMAP
        DDB_SYS_DIR_CACHE
        DDB_SYS_DIR_PLUGIN_RESOURCES

    ctypedef struct DB_FILE:
        DB_vfs_s* vfs

    cdef struct DB_md5_s:
        char data[88]

    ctypedef DB_md5_s DB_md5_t

    ctypedef struct ddb_waveformat_t:
        int bps
        int channels
        int samplerate
        uint32_t channelmask
        int is_float
        uint32_t flags

    cpdef enum:
        DDB_WAVEFORMAT_FLAG_IS_DOP

    const int DDB_FREQ_BANDS

    const int DDB_FREQ_MAX_CHANNELS

    cdef struct ddb_audio_data_s:
        ddb_waveformat_t* fmt
        float* data
        int nframes

    ctypedef ddb_audio_data_s ddb_audio_data_t

    cdef struct ddb_fileadd_data_s:
        int visibility
        ddb_playlist_t* plt
        ddb_playItem_t* track

    ctypedef ddb_fileadd_data_s ddb_fileadd_data_t

    cpdef enum:
        DDB_TF_CONTEXT_HAS_INDEX
        DDB_TF_CONTEXT_HAS_ID
        DDB_TF_CONTEXT_NO_DYNAMIC
        DDB_TF_CONTEXT_MULTILINE
        DDB_TF_CONTEXT_TEXT_DIM
        DDB_TF_CONTEXT_NO_MUTEX_LOCK

    cpdef enum:
        DDB_TF_ESC_DIM
        DDB_TF_ESC_RGB

    cdef struct ddb_file_found_data_s:
        ddb_playlist_t* plt
        const char* filename
        int is_dir

    ctypedef ddb_file_found_data_s ddb_file_found_data_t

    ctypedef void (*_ddb_tf_context_t_ddb_tf_context_t_ddb_tf_context_s_metadata_transformer_ft)(ddb_tf_context_s* ctx, char* data, size_t size)

    cdef struct ddb_tf_context_s:
        int _size
        uint32_t flags
        ddb_playItem_t* it
        ddb_playlist_t* plt
        int idx
        int id
        int iter
        int update
        int dimmed
        _ddb_tf_context_t_ddb_tf_context_t_ddb_tf_context_s_metadata_transformer_ft metadata_transformer

    ctypedef ddb_tf_context_s ddb_tf_context_t

    cpdef enum:
        DDB_LOG_LAYER_DEFAULT
        DDB_LOG_LAYER_INFO

    ctypedef enum ddb_insert_file_result_t:
        DDB_INSERT_FILE_RESULT_SUCCESS
        DDB_INSERT_FILE_RESULT_UNRECOGNIZED_FILE
        DDB_INSERT_FILE_RESULT_RECOGNIZED_FAILED
        DDB_INSERT_FILE_RESULT_RELATIVE_PATH
        DDB_INSERT_FILE_RESULT_NULL_FILENAME
        DDB_INSERT_FILE_RESULT_ESCAPE_CHARACTERS_IN_FILENAME
        DDB_INSERT_FILE_RESULT_NO_FILE_EXTENSION
        DDB_INSERT_FILE_RESULT_CUESHEET_ERROR

    ctypedef enum ddb_insert_file_flags_t:
        DDB_INSERT_FILE_FLAG_FOLLOW_SYMLINKS
        DDB_INSERT_FILE_FLAG_ENTER_ARCHIVES

    cdef struct DB_plugin_s

    ctypedef void (*_DB_functions_t_DB_functions_t_md5_ft)(uint8_t sig[16], const char* in_, int len)

    ctypedef void (*_DB_functions_t_DB_functions_t_md5_to_str_ft)(char* str, const uint8_t sig[16])

    ctypedef void (*_DB_functions_t_DB_functions_t_md5_init_ft)(DB_md5_t* s)

    ctypedef void (*_DB_functions_t_DB_functions_t_md5_append_ft)(DB_md5_t* s, const uint8_t* data, int nbytes)

    ctypedef void (*_DB_functions_t_DB_functions_t_md5_finish_ft)(DB_md5_t* s, uint8_t digest[16])

    ctypedef DB_output_s* (*_DB_functions_t_DB_functions_t_get_output_ft)()

    ctypedef float (*_DB_functions_t_DB_functions_t_playback_get_pos_ft)()

    ctypedef void (*_DB_functions_t_DB_functions_t_playback_set_pos_ft)(float pos)

    ctypedef DB_playItem_t* (*_DB_functions_t_DB_functions_t_streamer_get_playing_track_ft)()

    ctypedef DB_playItem_t* (*_DB_functions_t_DB_functions_t_streamer_get_streaming_track_ft)()

    ctypedef float (*_DB_functions_t_DB_functions_t_streamer_get_playpos_ft)()

    ctypedef int (*_DB_functions_t_DB_functions_t_streamer_ok_to_read_ft)(int len)

    ctypedef void (*_DB_functions_t_DB_functions_t_streamer_reset_ft)(int full)

    ctypedef int (*_DB_functions_t_DB_functions_t_streamer_read_ft)(char* bytes, int size)

    ctypedef void (*_DB_functions_t_DB_functions_t_streamer_set_bitrate_ft)(int bitrate)

    ctypedef int (*_DB_functions_t_DB_functions_t_streamer_get_apx_bitrate_ft)()

    ctypedef DB_fileinfo_s* (*_DB_functions_t_DB_functions_t_streamer_get_current_fileinfo_ft)()

    ctypedef int (*_DB_functions_t_DB_functions_t_streamer_get_current_playlist_ft)()

    ctypedef ddb_dsp_context_s* (*_DB_functions_t_DB_functions_t_streamer_get_dsp_chain_ft)()

    ctypedef void (*_DB_functions_t_DB_functions_t_streamer_set_dsp_chain_ft)(ddb_dsp_context_s* chain)

    ctypedef void (*_DB_functions_t_DB_functions_t_streamer_dsp_refresh_ft)()

    ctypedef const char* (*_DB_functions_t_DB_functions_t_get_config_dir_ft)()

    ctypedef const char* (*_DB_functions_t_DB_functions_t_get_prefix_ft)()

    ctypedef const char* (*_DB_functions_t_DB_functions_t_get_doc_dir_ft)()

    ctypedef const char* (*_DB_functions_t_DB_functions_t_get_plugin_dir_ft)()

    ctypedef const char* (*_DB_functions_t_DB_functions_t_get_pixmap_dir_ft)()

    ctypedef void (*_DB_functions_t_DB_functions_t_do_not_call_ft)()

    ctypedef void (*_DB_functions_t_DB_functions_t_thread_start_fn_ft)(void* ctx)

    ctypedef intptr_t (*_DB_functions_t_DB_functions_t_thread_start_ft)(_DB_functions_t_DB_functions_t_thread_start_fn_ft fn, void* ctx)

    ctypedef void (*_DB_functions_t_DB_functions_t_thread_start_low_priority_fn_ft)(void* ctx)
